tests/error/comptime_arg_errors/dependent_mismatch1.py
from guppylang import guppy
from guppylang.std.builtins import nat, comptime, array


@guppy.declare
def foo(n: nat @comptime, xs: "array[int, n]") -> None: ...


@guppy
def main() -> None:
    foo(3, array(1, 2))


guppy.compile(main)
